Add README.md and update .env.template

--- a/.env.template
+++ b/.env.template
@@ -3,8 +3,8 @@ MYSQL_ROOT_PASSWORD = "password"
 MYSQL_DATABASE = "wordpress"
 MYSQL_USER = "wordpress"
 MYSQL_PASSWORD = "wordpress"
-WORDPRESS_VERSION = "beta-6.0-RC2"
-WORDPRESS_PORT_80 = 8000
+WORDPRESS_VERSION = "latest"
+WORDPRESS_PORT_80 = 8080
 WORDPRESS_DB_HOST = "db"
 WORDPRESS_DB_USER = "wordpress"
 WORDPRESS_DB_PASSWORD = "wordpress"
